[tool.poetry]
name = "demoapi"
version = "0.1.0"
description = "FastAPI document receiver"
authors = ["Tariq Jamal A <tariqjamal4267324@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.117.1"}
sqlalchemy = "^2.0.43"
boto3 = "^1.40.40"
pydantic-settings = "^2.11.0"
cloudinary = "^1.41.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.9.0"
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
